# raspberry-sx

./: .gitignore  LICENSE  README.md
GPIO print/: GPIO print.kicad_pcb  GPIO print.kicad_prl  GPIO print.kicad_pro  GPIO print.kicad_sch  fp-info-cache
Power print/: Micro Controller.kicad_sch  Power print.kicad_dru  Power print.kicad_pcb  Power print.kicad_prl  Power print.kicad_pro  Power print.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~Power print.kicad_sch.lck
Power print/bom/: Power print.csv
Power print/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Power print/symbols/BC846/: BC846BQ.spice.txt
Power print/symbols/CH224K/: PCBLIB_ESSOP-10_L4.9-W3.9-P1.0-LS6.0-TL-EP_2024-11-15.json
Power print/symbols/INA3221AIRGVR/: INA3221AIRGVR.dcm  INA3221AIRGVR.kicad_sym  INA3221AIRGVR.lib  INA3221AIRGVR.mod  PCBLIB_QFN-16_L4.0-W4.0-P0.65-TL-EP2.2_2024-11-15.json  QFN65P400X400X100-17N-D.kicad_mod
PowerOn print/: PowerOn print.kicad_pcb  PowerOn print.kicad_prl  PowerOn print.kicad_pro  PowerOn print.kicad_sch  PowerOn print.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
PowerOn print/Push-button/: tswitch.lib
PowerOn print/USB4140-GF-0230-C_REV0.4/: GCT_USB4140-GF-0230-C_REV0.4.kicad_mod  USB4140-GF-0230-C_REV0.4.kicad_sym
design/: Cyberdeck.FCStd  Cyberdeck.FCStd1  Keyboard.FCStd  Keyboard.FCStd1  Panels.FCStd  Panels.FCStd1
docs/: cyberdeck-body.md  cyberdeck-keyboard.md  notes.md
powercheck/: .gitignore  CMakeLists.txt  cherry.h  powerdisplay.cpp  powerdisplay.hpp  powermgmnt.cpp
(+34 files in other folders)
